<resources>
    <string name="app_name">TaxiMauritius</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>


    <!--test account-->
    <!--  <string name="fb_app_id">737299563117197</string>
    <string name="fb_login_protocol_scheme">fb737299563117197</string>-->

    <!--personal account-->
    <string name="fb_app_id">115404675713417</string>
    <string name="fb_login_protocol_scheme">fb115404675713417</string>

    <string name="title_activity_login">Login</string>
    <string name="activity_login_copyright">\u00A9 Shashi Raghoo</string>

    <string name="loginActivity_welcome_message">Welcome to Taxi Mauritius</string>
    <string name="google_map_api_key">AIzaSyDA2oi_ADIg4aMsoNhl2AhoSPQCC9A5vAI</string>

    <string name="menu_google_map">Map</string>
    <string name="menu_create_request">Create Request</string>
    <string name="menu_request">Request</string>
    <string name="menu_history">History</string>
    <string name="menu_logout">Logout</string>

    <string name="login_activity_select_user_type">What type of user are you?</string>

    <string name="login_activity_prompt_user_type">Choose a user type</string>

    <string-array name="user_type_arrays">
        <item>SELECT USER TYPE</item>
        <item>TAXI DRIVER</item>
        <item>OTHER</item>
    </string-array>

    <string-array name="manage_request_arrays">
        <item>PENDING</item>
        <item>DRIVER ACCEPTED</item>
        <item>I ACCEPTED</item>
    </string-array>

    <string-array name="manage_request_taxi_arrays">
        <item>PENDING</item>
        <item>I ACCEPTED</item>
        <item>CLIENT ACCEPTED</item>
      <!--  <item>CLIENT REJECTED</item>-->
        <item>I REJECTED</item>
    </string-array>

    <string name="complete_registration_make">Make:</string>
    <string name="complete_registration_plate_num">Plate Num:</string>
    <string name="complete_registration_comment">Comment:</string>
    <string name="complete_registration_year">Year:</string>
    <string name="complete_registration_number_of_passenger">Passengers:</string>
    <string name="complete_registration_address">Address:</string>
    <string name="complete_registration_take_picture">Add Image</string>
    <string name="complete_registration_next">Next</string>


    <string name="complete_registration_validation_make">Make cannot be null</string>
    <string name="complete_registration_validation_plate_num">Plate Number cannot be null</string>
    <string name="complete_registration_validation_comment">Comment:</string>
    <string name="complete_registration_validation_year">Year cannot be null</string>
    <string name="complete_registration_validation_year_above">Year cannot be greater than current year</string>
    <string name="complete_registration_validation_year_below">Car must be of maximum 15 years</string>
    <string name="complete_registration_validation_number_of_passenger">Number of passengers cannot be null</string>
    <string name="complete_registration_validation_number_of_passenger_below">Number of passengers cannot be less than 1</string>
    <string name="complete_registration_validation_number_of_passenger_above">Number of passengers cannot be above than 6</string>
    <string name="complete_registration_validation_image">There should be at least 1 image</string>
    <string name="complete_registration_validation_autocomplete_address">Address can not be null</string>
    <string name="complete_registration_validation_autocomplete_address_no_match">Please select address from autocomplete list</string>


    <string name="create_request_activity_validation_autocomplete_address">Address can not be null</string>
    <string name="create_request_activity_validation_autocomplete_price">Price can not be null</string>
    <string name="create_request_activity_validation_autocomplete_date">Date can not be null</string>
    <string name="create_request_activity_validation_autocomplete_time">Time can not be null</string>
    <string name="create_request_activity_validation_autocomplete_details">Details can not be null</string>
    <string name="create_request_activity_validation_autocomplete_address_no_match">Please select address from autocomplete list</string>


    <string name="complete_registration_gallery">Gallery</string>
    <string name="complete_registration_camera">Camera</string>

    <string name="activity_logout_header">Logout</string>
    <string name="activity_logout_content">Are you sure you want to logout?</string>

    <string name="fragment_create_request_to">To:</string>
    <string name="fragment_create_request_from">From:</string>
    <string name="fragment_create_request_time">Time:</string>
    <string name="fragment_create_request_details">Details</string>
    <string name="fragment_create_request_date">Date:</string>

    <string name="fragment_view_request_taxi">Price</string>
    <string name="fragment_view_request_taxi_driver_name">Driver Name:</string>


    <string name="error_server">An error has occured please try again later</string>

    <string-array name="address_arrays">
        <item>Select user type</item>
        <item>	Albion	</item>
        <item>	Amaury	</item>
        <item>	Amitie Gokhoola	</item>
        <item>	Anse La Raie	</item>
        <item>	Arsenal	</item>
        <item>	Baie du Cap	</item>
        <item>	Baie du Tombeau	</item>
        <item>	Bambous	</item>
        <item>	Bambous Virieux	</item>
        <item>	Bananes	</item>
        <item>	Beau Bassin	</item>
        <item>	Beau Vallon	</item>
        <item>	Bel Air Riviere Seche	</item>
        <item>	Bel Ombre	</item>
        <item>	Belle Vue Maurel	</item>
        <item>	Benares	</item>
        <item>	Bois Cheri	</item>
        <item>	Bois des Amourettes	</item>
        <item>	Bon Accueil	</item>
        <item>	Bramsthan	</item>
        <item>	Brisee Verdiere	</item>
        <item>	Britannia	</item>
        <item>	Calebasses	</item>
        <item>	Camp Carol	</item>
        <item>	Camp de Masque	</item>
        <item>	Camp de Masque Pave	</item>
        <item>	Camp Diable	</item>
        <item>	Camp Ithier	</item>
        <item>	Camp Thorel	</item>
        <item>	Cap Malheureux	</item>
        <item>	Cascavelle	</item>
        <item>	Case Noyale	</item>
        <item>	Centre de Flacq	</item>
        <item>	Chamarel	</item>
        <item>	Chamouny	</item>
        <item>	Chemin Grenier	</item>
        <item>	Clemencia	</item>
        <item>	Cluny	</item>
        <item>	Congomah	</item>
        <item>	Cottage	</item>
        <item>	Creve Coeur	</item>
        <item>	Curepipe	</item>
        <item>	Depinay	</item>
        <item>	Dagotiere	</item>
        <item>	Dubreuil	</item>
        <item>	Ecroignard	</item>
        <item>	Esperance	</item>
        <item>	Esperance Trebuchet	</item>
        <item>	Flic en Flac	</item>
        <item>	Fond du Sac	</item>
        <item>	Goodlands	</item>
        <item>	Grand Baie	</item>
        <item>	Grand Bel Air	</item>
        <item>	Grand Bois	</item>
        <item>	Grand Gaube	</item>
        <item>	Grand Sable	</item>
        <item>	Grande Retraite	</item>
        <item>	Grande Riviere Noire	</item>
        <item>	Grande Riviere Sud Est	</item>
        <item>	Gros Cailloux	</item>
        <item>	LAvenir	</item>
        <item>	LEscalier	</item>
        <item>	La Flora	</item>
        <item>	La Gaulette	</item>
        <item>	La Laura-Malenga	</item>
        <item>	Lalmatie	</item>
        <item>	Laventure	</item>
        <item>	Le Hochet	</item>
        <item>	Le Morne	</item>
        <item>	The Vale	</item>
        <item>	Mahebourg	</item>
        <item>	Mapou	</item>
        <item>	Mare Chicose	</item>
        <item>	Mare dAlbert	</item>
        <item>	Mare La Chaux	</item>
        <item>	Mare Tabac	</item>
        <item>	Medine Camp de Masque	</item>
        <item>	Melrose	</item>
        <item>	Midlands	</item>
        <item>	Moka	</item>
        <item>	Montagne Blanche	</item>
        <item>	Montagne Longue	</item>
        <item>	Morcellement Saint Andre	</item>
        <item>	New Grove	</item>
        <item>	Notre Dame	</item>
        <item>	Nouvelle Decouverte	</item>
        <item>	Nouvelle France	</item>
        <item>	Olivia	</item>
        <item>	Pailles	</item>
        <item>	Pamplemousses	</item>
        <item>	Petit Bel Air	</item>
        <item>	Petit Raffray	</item>
        <item>	Petite Riviere	</item>
        <item>	Phoenix	</item>
        <item>	Piton	</item>
        <item>	Plaine des Papayes	</item>
        <item>	Plaine des Roches	</item>
        <item>	Plaine Magnien	</item>
        <item>	Pointe aux Piments	</item>
        <item>	Port Louis	</item>
        <item>	Poste de Flacq	</item>
        <item>	Poudre dOr	</item>
        <item>	Poudre dOr Hamlet	</item>
        <item>	Providence	</item>
        <item>	Quatre Bornes	</item>
        <item>	Quartier Militaire	</item>
        <item>	Quatre Cocos	</item>
        <item>	Quatre Soeurs	</item>
        <item>	Queen Victoria	</item>
        <item>	Richelieu	</item>
        <item>	Ripailles	</item>
        <item>	Riviere des Anguilles	</item>
        <item>	Riviere des Creoles	</item>
        <item>	Riviere du Poste	</item>
        <item>	Riviere du Rempart	</item>
        <item>	Riviere Noire	</item>
        <item>	Roche Terre	</item>
        <item>	Roches Noires	</item>
        <item>	Rose Belle	</item>
        <item>	Rose Hill	</item>
        <item>	Saint Aubin	</item>
        <item>	Saint Hubert	</item>
        <item>	Saint Julien Village	</item>
        <item>	Saint Julien dHotman	</item>
        <item>	Saint Pierre	</item>
        <item>	Sebastopol	</item>
        <item>	Seizieme Mille	</item>
        <item>	Souillac	</item>
        <item>	Surinam	</item>
        <item>	Tamarin	</item>
        <item>	Terre Rouge	</item>
        <item>	Triolet	</item>
        <item>	Trois Boutiques	</item>
        <item>	Trou aux Biches	</item>
        <item>	Trou dEau Douce	</item>
        <item>	Tyack	</item>
        <item>	Union Park	</item>
        <item>	Vacoas	</item>
        <item>	Vale	</item>
        <item>	Verdun	</item>
        <item>	Vieux Grand Port	</item>
        <item>	Ville Bague	</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>
