<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/navGoogleMap"
            android:icon="@drawable/logo_google_map"
            android:title="@string/menu_google_map" />
        <item
            android:id="@+id/navCreateRequest"
            android:icon="@drawable/icon_plus"
            android:title="@string/menu_create_request" />
        <item
            android:id="@+id/navHistory"
            android:icon="@drawable/logo_history"
            android:title="@string/menu_history" />

        <item
            android:id="@+id/navLogOut"
            android:icon="@drawable/logo_logout"
            android:title="@string/menu_logout" />

    </group>

   <!-- <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="Share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="Send" />
        </menu>
    </item>-->

</menu>
