<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/llMain"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TableLayout
        android:layout_margin="5dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <TableRow
        android:layout_margin="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:gravity="center_vertical"
            android:layout_weight="0.3"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/fragment_create_request_from"/>

        <TextView
            android:gravity="left"
            android:id="@+id/txtFrom"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_weight="0.7"
            android:layout_width="0dp"
            android:layout_height="match_parent"/>

    </TableRow>

    <TableRow
        android:layout_margin="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:gravity="center_vertical"
            android:layout_weight="0.3"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/fragment_create_request_to"/>

        <TextView
            android:gravity="left"
            android:id="@+id/txtTo"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_weight="0.7"
            android:layout_width="0dp"
            android:layout_height="match_parent"/>

    </TableRow>

    <TableRow
        android:layout_margin="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:gravity="center_vertical"
            android:layout_weight="0.3"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/fragment_create_request_date"/>

        <TextView
            android:textColor="@color/black"
            android:textStyle="bold"
            android:gravity="left"
            android:id="@+id/txtDate"
            android:layout_weight="0.7"
            android:layout_width="0dp"
            android:layout_height="match_parent"/>

    </TableRow>

    <TableRow
        android:layout_margin="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:gravity="center_vertical"
            android:layout_weight="0.3"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/fragment_create_request_time"/>

        <TextView
            android:textColor="@color/black"
            android:textStyle="bold"
            android:gravity="left"
            android:id="@+id/txtTime"
            android:layout_weight="0.7"
            android:layout_width="0dp"
            android:layout_height="match_parent"/>

    </TableRow>


        <LinearLayout
            android:background="@color/taxiBackground"
            android:layout_width="match_parent"
            android:layout_height="1dp"/>

    </TableLayout>

</LinearLayout>
