<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TableLayout
        android:layout_weight="0.1"
        android:layout_margin="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_weight="0.4"
                android:textColor="@color/black"
                android:textSize="20dp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/complete_registration_make"/>

            <EditText
                android:id="@+id/editTextMake"
                android:layout_weight="0.6"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="20dp"
                android:textColor="@color/black"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_weight="0.4"
                android:textColor="@color/black"
                android:textSize="20dp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/complete_registration_year"/>

            <EditText
                android:inputType="number"
                android:id="@+id/editTextYear"
                android:layout_weight="0.6"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="20dp"
                android:textColor="@color/black"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_weight="0.4"
                android:textColor="@color/black"
                android:textSize="20dp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/complete_registration_plate_num"/>

            <EditText
                android:id="@+id/editTextPlateNum"
                android:layout_weight="0.6"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="20dp"
                android:textColor="@color/black"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_weight="0.4"
                android:textColor="@color/black"
                android:textSize="20dp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/complete_registration_number_of_passenger"/>

            <EditText
                android:inputType="number"
                android:id="@+id/editTextNumOfPassenger"
                android:layout_weight="0.6"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="20dp"
                android:textColor="@color/black"/>
        </TableRow>

    </TableLayout>

    <LinearLayout
        android:layout_weight="0.4"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp">

        <ImageView
            android:scaleType="centerCrop"
            android:background="@color/com_facebook_likeboxcountview_border_color"
            android:layout_margin="1dp"
            android:id="@+id/img1"
            android:layout_weight="0.5"
            android:layout_width="0dp"
            android:layout_height="match_parent" />

        <ImageView
            android:scaleType="centerCrop"
            android:background="@color/com_facebook_likeboxcountview_border_color"
            android:layout_margin="1dp"
            android:id="@+id/img2"
            android:layout_weight="0.5"
            android:layout_width="0dp"
            android:layout_height="match_parent" />

    </LinearLayout>

    <LinearLayout
        android:layout_weight="0.4"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp">

        <ImageView
            android:scaleType="centerCrop"
            android:background="@color/com_facebook_likeboxcountview_border_color"
            android:layout_margin="1dp"
            android:id="@+id/img3"
            android:layout_weight="0.5"
            android:layout_width="0dp"
            android:layout_height="match_parent" />

        <ImageView
            android:scaleType="centerCrop"
            android:background="@color/com_facebook_likeboxcountview_border_color"
            android:layout_margin="1dp"
            android:id="@+id/img4"
            android:layout_weight="0.5"
            android:layout_width="0dp"
            android:layout_height="match_parent" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_weight="0.1"
        android:layout_width="match_parent"
        android:layout_height="0dp">


        <Button
            android:text="@string/complete_registration_take_picture"
            android:id="@+id/btnAddImage"
            android:layout_weight="0.5"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="1dp"
            android:layout_marginRight="1dp"/>

        <Button
            android:text="@string/complete_registration_next"
            android:id="@+id/btnNext"
            android:layout_weight="0.5"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="1dp"
            android:layout_marginRight="1dp"/>
    </LinearLayout>

</LinearLayout>